--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.13.0",
     "node": "^22.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
