--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.13.0",
     "node": "^22.9.0",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "sequelize": "^6.37.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
